# kairos_lang

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEX_MASTER_PROMPT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KAIROS_REPOSITORY_BLUEPRINT.md  LICENSE  README.md  ROADMAP.md  TASKS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/kairos-ast/: Cargo.toml
crates/kairos-ast/src/: lib.rs
crates/kairos-cli/: Cargo.toml
crates/kairos-cli/src/: main.rs  presentation.rs  scaffold.rs  shell.rs  workspace.rs
crates/kairos-cli/tests/: cli.rs
crates/kairos-formatter/: Cargo.toml
crates/kairos-formatter/src/: lib.rs
crates/kairos-interpreter/: Cargo.toml
crates/kairos-interpreter/src/: lib.rs
crates/kairos-ir/: Cargo.toml
crates/kairos-ir/src/: lib.rs
crates/kairos-parser/: Cargo.toml
crates/kairos-parser/src/: grammar.pest  lib.rs
crates/kairos-project/: Cargo.toml
crates/kairos-project/src/: lib.rs
crates/kairos-semantic/: Cargo.toml
crates/kairos-semantic/src/: lib.rs
docs/: ai-first-design.md  cli.md  github-setup.md  language-overview.md  projects.md  shell.md  syntax.md
examples/assistant_briefing/: kairos.toml
examples/assistant_briefing/src/: briefing.kai  main.kai  policies.kai
examples/decision_bundle/: kairos.toml
examples/decision_bundle/src/: labels.kai  main.kai  scoring.kai
examples/hello_context/: kairos.toml
examples/hello_context/src/: main.kai
examples/package_reuse_demo/: kairos.toml
examples/package_reuse_demo/src/: main.kai
examples/risk_rules/: kairos.toml
examples/risk_rules/src/: main.kai
examples/shared_rules_lib/: kairos.toml
examples/shared_rules_lib/src/: api.kai  main.kai  text.kai
examples/stdlib_playbook/: kairos.toml
examples/stdlib_playbook/src/: main.kai  records.kai  strings.kai
examples/video_context/: kairos.toml
examples/video_context/src/: main.kai
scripts/: dev.ps1  dev.sh  release.ps1  release.sh
specs/: formatter-rules.md  kairos-ir.schema.json  kairos.ebnf  stdlib.md
tests/fixtures/invalid/: missing_module.kai
tests/fixtures/valid/: basic_function.kai
tests/integration/: README.md
