[workspace]
members = [
  "crates/kairos-ast",
  "crates/kairos-parser",
  "crates/kairos-semantic",
  "crates/kairos-ir",
  "crates/kairos-interpreter",
  "crates/kairos-formatter",
  "crates/kairos-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT"
authors = ["Kairos contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
