[workspace]
members = [
  "crates/kairos-ast",
  "crates/kairos-parser",
  "crates/kairos-semantic",
  "crates/kairos-project",
  "crates/kairos-ir",
  "crates/kairos-interpreter",
  "crates/kairos-formatter",
  "crates/kairos-cli",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"
authors = ["Kairos contributors"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
thiserror = "2"
toml = "0.8"
walkdir = "2"
