[package]
name = "kairos-project"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
walkdir.workspace = true
kairos-ast = { path = "../kairos-ast" }
kairos-parser = { path = "../kairos-parser" }
kairos-semantic = { path = "../kairos-semantic" }

[dev-dependencies]
tempfile = "3"
